--- a/partials/new.html
+++ b/partials/new.html
@@ -1,9 +1,9 @@
-<form class="form-horizontal" ng-submit="addToLib()">
+<form class="form-horizontal" ng-submit="addToLib(books)">
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Title</label>
 
         <div class="col-sm-10">
-            <input type="text" class="form-control" ng-model="title" id="inputEmail3"
+            <input type="text" class="form-control" ng-model="books.title" id="inputEmail3"
                    placeholder="Title">
         </div>
     </div>
@@ -11,7 +11,7 @@
         <label for="inputPassword3" class="col-sm-2 control-label">Author</label>
 
         <div class="col-sm-10">
-            <input type="text" ng-model="author" class="form-control" id="inputPassword3"
+            <input type="text" ng-model="books.author" class="form-control" id="inputPassword3"
                    placeholder="Author name">
         </div>
     </div>
