--- a/partials/new.html
+++ b/partials/new.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" ng-submit="addToLib(books)">
+<form class="form-horizontal" ng-submit="addToLib(books,books.sn)">
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Title</label>
 
