--- a/partials/new.html
+++ b/partials/new.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" ng-submit="addToLib(books,books.sn)">
+<form class="form-horizontal" >
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Title</label>
 
@@ -18,7 +18,7 @@
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-success">Save</button>
+            <button type="submit" class="btn btn-success" ng-click="addToLib(books)">Save</button>
         </div>
     </div>
 </form>
