--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -6,13 +6,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Angular Tutorials</a>
+        <a class="navbar-brand" href="index.html">Angular Tutorials</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="scope.html">Scope</a></li>
+            <li><a href="controller.html">Controller</a></li>
+            <li><a href="service.html">Contact</a></li>
         </ul>
     </div><!--/.nav-collapse -->
 </div>
