--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -12,7 +12,8 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="scope.html">Scope</a></li>
             <li><a href="controller.html">Controller</a></li>
-            <li><a href="service.html">Contact</a></li>
+            <li><a href="service.html">Services</a></li>
+	    <li><a href="forms.html">Forms</a></li>
         </ul>
     </div><!--/.nav-collapse -->
 </div>
