[ADD] Change on project structure

--- a/partials/blog.html
+++ b/partials/blog.html
@@ -4,10 +4,12 @@
     <tr>
         <th>S.N</th>
         <th>Title</th>
-        <th>Author</th>
+        <th>Author Name</th>
+        <th>Email</th>
+        <th>Publication Date</th>
         <th>Actions</th>
     </tr>
-    <tr ng-repeat="lib in libArra track by $index">
+    <tr ng-repeat="lib in posttrack by $index">
         <td>{{lib.sn}}</td>
         <td>{{lib.title}}</td>
         <td>{{lib.author}}</td>
