--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -10,10 +10,13 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="scope.html">Scope</a></li>
-            <li><a href="controller.html">Controller</a></li>
+            <!--class="active"-->
+            <li><a href="scope.html">Scope</a></li>
+            <li><a href="controller.html">Git Search</a></li>
             <li><a href="service.html">Services</a></li>
-	    <li><a href="forms.html">Forms</a></li>
+	        <li><a href="forms.html">Forms</a></li>
+            <li class="active" ><a ng-href="partials/blog.html" >Blog System</a></li>
+            <li><a href="blog-admin.html">Blog Admin</a></li>
         </ul>
     </div><!--/.nav-collapse -->
 </div>
