[DRAFT] Add some functionality

--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -15,8 +15,8 @@
             <li><a href="controller.html">Git Search</a></li>
             <li><a href="service.html">Services</a></li>
 	        <li><a href="forms.html">Forms</a></li>
-            <li class="active" ><a ng-href="partials/blog.html" >Blog System</a></li>
-            <li><a href="blog-admin.html">Blog Admin</a></li>
+            <li class="active" ><a href="#/blog" >Blog System</a></li>
+            <li><a href="#/blog-admin" >Blog Admin</a></li>
         </ul>
     </div><!--/.nav-collapse -->
 </div>
