--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -13,6 +13,7 @@
             <!--class="active"-->
             <li><a href="scope.html">Scope</a></li>
             <li><a href="controller.html">Git Search</a></li>
+            <li><a href="admin-pannel.html">Admin Apps</a></li>
             <li><a href="service.html">Services</a></li>
 	        <li><a href="forms.html">Forms</a></li>
             <li class="active" ><a href="#/blog" >Blog System</a></li>
