--- a/app/modules/posts/views/blog-admin.html
+++ b/app/modules/posts/views/blog-admin.html
@@ -8,7 +8,7 @@
         <th>Actions</th>
     </tr>
     <tr ng-repeat="blog in blogs track by $index">
-        <td>{{blog.sn}}</td>
+        <td>{{$index+1}}</td>
         <td>{{blog.title}}</td>
         <td>{{blog.author_name}}</td>
         <td>{{blog.email}}</td>
