--- a/app/modules/posts/views/blog.html
+++ b/app/modules/posts/views/blog.html
@@ -10,5 +10,16 @@
         <th>Publication Date</th>
         <th>Actions</th>
     </tr>
+    <tr ng-repeat="blog in blogs">
+        <td>{{$index+1}}</td>
+        <td>{{blog.title}}</td>
+        <td>{{blog.author_name}}</td>
+        <td>{{blog.email}}</td>
+        <td>{{blog.publish_date}}</td>
+        <td>
+            <a href="#/edit" class="btn btn-info btn-sm">Edit</a>
+            <a href="#/delete" class="btn btn-danger btn-sm">Delete</a>
+        </td>
+    </tr>
 
 </table>
