[MOD] Change on forms controller in angularJS

--- a/app/modules/posts/views/blog.html
+++ b/app/modules/posts/views/blog.html
@@ -1,6 +1,7 @@
-<a  class="btn btn-info" ng-click="false">Create  Books</a>
+<a href="#/new" class="btn btn-info" ng-click="false">Create New Blog</a>
 <br>
-<h1>Hi, Mehedi how are you??</h1>
+<br>
+
 <table class="table table-bordered">
     <tr>
         <th>S.N</th>
@@ -17,8 +18,8 @@
         <td>{{blog.email}}</td>
         <td>{{blog.publish_date}}</td>
         <td>
-            <a href="#/edit" class="btn btn-info btn-sm">Edit</a>
-            <a href="#/delete" class="btn btn-danger btn-sm">Delete</a>
+            <a href="/edit" class="btn btn-info btn-sm">Edit</a>
+            <a href="/delete" class="btn btn-danger btn-sm">Delete</a>
         </td>
     </tr>
 
