--- a/app/modules/posts/views/forms.html
+++ b/app/modules/posts/views/forms.html
@@ -4,34 +4,34 @@
             <label id="firstname" class="col-sm-4 control-label">First Name:</label>
 
             <div class="col-sm-8">
-                <input type="text" class="form-control" ng-model="user.firstName" id="firstName"
-                       placeholder="First Name" ng-required="true" ng-minlength="2">
+                <input type="text" class="form-control" ng-model="blog.title" id="title"
+                       placeholder="Title" ng-required="true" ng-minlength="2" />
             </div>
             <br>
-            <span class="error-message" ng-show="myform.firstName.$dirty">
+            <span class="error-message" ng-show="myform.title.$dirty">
                             This field is mandatory
                     </span>
-            <span class="error-message" ng-show="myform.firstName.$dirty && myform.firstName.$error.minlength">
+            <span class="error-message" ng-show="myform.title.$dirty && myform.title.$error.minlength">
                             The First Name should be minimum 2 characters
                     </span>
         </div>
         <div class="form-group">
-            <label id="lastName" class="col-sm-4 control-label">Last Name:</label>
+            <label id="author_name" class="col-sm-4 control-label">Author Name:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control" ng-model="user.lastName" id="lastName"
-                       placeholder="Last Name" ng-required="true" ng-minlength="2">
+                <input type="text" class="form-control" ng-model="blog.author_name" id="author_name"
+                       placeholder="Author Name" ng-required="true" ng-minlength="2" />
             </div>
         </div>
         <div class="form-group">
-            <label id="phoneNumber" class="col-sm-4 control-label">Phone Number:</label>
+            <label id="email" class="col-sm-4 control-label">Email:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control" ng-model="user.phoneNumber" id="phoneNumber">
+                <input type="text" class="form-control" ng-model="blog.email" ng-required="true" ng-pattern="/^\w@\w{3}.\w{1,}$/" id="email" />
             </div>
         </div>
         <div class="form-group">
             <label id="selectGroup" class="col-sm-4 control-label">Country:</label>
             <div class="col-sm-8">
-                <select name="country" ng-model="user.country" class="form-control"
+                <select name="country" ng-model="blog.country" class="form-control"
                         ng-options="country.id as country.desc for country in countries">
                 </select>
             </div>
@@ -43,4 +43,27 @@
         </div>
     </form>
 </div>
+
+<table class="table table-bordered">
+    <tr>
+        <th>S.N</th>
+        <th>Title</th>
+        <th>Author Name</th>
+        <th>Email</th>
+        <th>Publication Date</th>
+        <th>Actions</th>
+    </tr>
+    <tr ng-repeat="blog in blogs">
+        <td>{{$index+1}}</td>
+        <td>{{blog.title}}</td>
+        <td>{{blog.author_name}}</td>
+        <td>{{blog.email}}</td>
+        <td>{{blog.publish_date | date:'dd/MM/yyyy'}}</td>
+        <td>
+            <a href="/edit" class="btn btn-info btn-sm">Edit</a>
+            <a href="/delete" class="btn btn-danger btn-sm">Delete</a>
+        </td>
+    </tr>
+
+</table>
 
