--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -11,13 +11,9 @@
     <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
             <!--class="active"-->
-            <li><a href="scope.html">Scope</a></li>
+            <li class="active" ><a href="#/blog" >Blogs</a></li>
             <li><a href="controller.html">Git Search</a></li>
-            <li><a href="admin-pannel.html">Admin Apps</a></li>
             <li><a href="service.html">Services</a></li>
-	        <li><a href="forms.html">Forms</a></li>
-            <li class="active" ><a href="#/blog" >Blog System</a></li>
-            <li><a href="#/blog-admin" >Blog Admin</a></li>
-        </ul>
+	    </ul>
     </div><!--/.nav-collapse -->
 </div>
